# fluent_audio_ros2

./: .gitignore  CLAUDECODE_DOCUMENTATION_ROLE.md  CLAUDECODE_RULES.md  CPP_CODING_RULES.md  ENGINEERING_PHILOSOPHY.md  FUTURE_CODEX_MESSAGE.md  NODE_ENGINEER_ROLE.md  PRODUCT_OWNER_ROLE.md  README.md  start_aspa.sh  stop_aspa.sh
src/ai/fa_asr/: CMakeLists.txt  README.md  package.xml
src/ai/fa_asr/config/: default.yaml
src/ai/fa_asr/docs/: アルゴリズム詳細説明書.md  テスト設計.md  仕様書.md
src/ai/fa_asr/docs/backends/: local_command.md  nemo_offline_transcribe.md  nemo_rnnt_streaming.md  openai_realtime.md  openai_transcriptions.md  parakeet_multilingual_buffered.md  parakeet_worker.md  whisper.cpp.md  whisper_cpp.md
src/ai/fa_asr/fa_asr_py/: __init__.py  asr_node.py  asr_stream_controller.py  timeline.py
src/ai/fa_asr/fa_asr_py/backends/: __init__.py  _command_process.py  base.py  factory.py  local_command.py  nemo_offline_transcribe.py  nemo_parakeet_runtime.py  nemo_rnnt_streaming.py  openai_credentials.py  openai_realtime.py  openai_transcriptions.py  parakeet_multilingual_buffered.py  parakeet_rnnt_stream_processor.py  parakeet_worker.py  riva_nim_grpc.py  whisper_cpp.py
src/ai/fa_asr/launch/: fa_asr.launch.py
src/ai/fa_asr/scripts/: download_whisper_cpp_model  fa_asr_node  nemo_offline_transcribe_worker  nemo_rnnt_streaming_worker  prepare_nemo_offline_transcribe_asr  prepare_nemo_rnnt_streaming_asr  prepare_whisper_cpp_asr  whisper_cpp_worker
src/ai/fa_audio_embedding/: CMakeLists.txt  README.md  package.xml
src/ai/fa_audio_embedding/config/: default.yaml
src/ai/fa_audio_embedding/docs/: アルゴリズム詳細説明書.md  テスト設計.md  仕様書.md
src/ai/fa_audio_embedding/fa_audio_embedding_py/: audio_embedding_node.py
src/ai/fa_audio_embedding/launch/: fa_audio_embedding.launch.py
src/ai/fa_audio_embedding/scripts/: fa_audio_embedding_node
src/ai/fa_kws/: CMakeLists.txt  README.md  package.xml
src/ai/fa_kws/config/: default.yaml
src/ai/fa_kws/docs/: アルゴリズム詳細説明書.md  テスト設計.md  仕様書.md
src/ai/fa_kws/fa_kws_py/: __init__.py
src/ai/fa_kws/launch/: fa_kws.launch.py
src/ai/fa_kws/scripts/: prepare_sherpa_onnx_kws  sherpa_onnx_kws_worker
src/ai/fa_kws/src/: audio_utils.cpp  fa_kws_node.cpp  kws_wav_tool.cpp  vad_gate.cpp  vad_state_identity.cpp
src/ai/fa_tts/: CMakeLists.txt  README.md
src/ai/fa_tts/config/: default.yaml
src/ai/fa_tts/fa_tts_py/: __init__.py  tts_node.py
src/ai/fa_tts/launch/: fa_tts.launch.py
src/ai/fa_tts/scripts/: fa_tts_node
src/ai/fa_turn_detector/: CMakeLists.txt  README.md  package.xml
src/ai/fa_turn_detector/config/: default.yaml
src/ai/fa_turn_detector/docs/: アルゴリズム詳細説明書.md  テスト設計.md  仕様書.md
src/ai/fa_turn_detector/fa_turn_detector_py/: __init__.py  turn_detector_node.py
src/ai/fa_turn_detector/launch/: fa_turn_detector.launch.py
src/ai/fa_turn_detector/scripts/: fa_turn_detector_node  prepare_smart_turn_onnx  smart_turn_onnx_worker
src/ai/fa_vad/: CMakeLists.txt  README.md  package.xml
src/ai/fa_vad/config/: default.yaml  default_vad.yaml
src/ai/fa_vad/docs/: アルゴリズム詳細説明書.md  テスト設計.md  仕様書.md
src/ai/fa_vad/fa_vad_py/: __init__.py  audio_frame.py  contracts.py  silero.py  speech_activity.py  vad_node.py  vad_probability_stream.py
src/ai/fa_vad/launch/: fa_vad.launch.py
src/ai/fa_vad/scripts/: fa_vad_node  prepare_silero_vad
src/ai/fv_aspara_points/: CMakeLists.txt  package.xml
src/ai/fv_aspara_points/src/: fv_aspara_points_node.cpp
src/ai/fv_detection_fusion/: CMakeLists.txt  package.xml
src/ai/fv_detection_fusion/config/: fv_detection_fusion_d405.yaml  fv_detection_fusion_d415.yaml
src/ai/fv_detection_fusion/src/: fv_detection_fusion_node.cpp
src/ai/fv_instance_seg/: CMakeLists.txt  package.xml
src/ai/fv_instance_seg/config/: instance_seg_params.yaml
src/ai/fv_instance_seg/launch/: instance_seg.launch.py
src/ai/fv_instance_seg/src/: fv_instance_seg_node.cpp
src/ai/fv_object_detector/: CMakeLists.txt  package.xml
src/ai/fv_object_detector/src/: ai_model.cpp  fv_object_detector_node.cpp  object_tracker.cpp  yolov10_model.cpp
src/ai/fv_object_mask_generator/: CMakeLists.txt  package.xml
src/ai/fv_object_mask_generator/src/: fv_object_mask_generator_node.cpp
src/ai/fv_pointcloud_pipeline/: CMakeLists.txt  package.xml
src/ai/fv_pointcloud_pipeline/config/: fv_pointcloud_default.yaml  fv_pointcloud_dense.yaml
src/ai/fv_pointcloud_pipeline/src/: fv_pointcloud_pipeline_node.cpp
src/ai/fv_stalk_estimator/: CMakeLists.txt  package.xml
src/ai/fv_stalk_estimator/src/: fv_stalk_estimator_node.cpp
src/apps/fa_voice_command_router/: CMakeLists.txt  README.md  package.xml
src/apps/fa_voice_command_router/docs/: アルゴリズム詳細説明書.md  テスト設計.md
src/apps/fa_voice_command_router/fa_voice_command_router_py/: router_node.py
src/apps/fa_voice_command_router/launch/: fa_voice_command_router.launch.py
src/audio/fv_audio/: CMakeLists.txt  README.md
src/audio/fv_audio/msg/: AudioFrame.msg
src/audio/fv_audio/scripts/: radio_streamer.py
src/audio/fv_audio/src/: fv_audio_node.cpp
src/audio/fv_audio/srv/: ListDevices.srv
src/audio/fv_audio_output/: CMakeLists.txt  README.md  package.xml
src/audio/fv_audio_output/config/: default.yaml
src/audio/fv_audio_output/src/: fv_audio_output_node.cpp
src/audio/fv_audio_output/srv/: PlayFile.srv
src/audio/fv_audio_vad/: CMakeLists.txt  README.md
src/audio/fv_audio_vad/launch/: fv_audio_vad_launch.py
src/audio/fv_audio_vad/src/: fv_audio_vad_node.cpp
src/audio/fv_tts/: README.md  package.xml
src/audio/fv_tts/config/: default.yaml
src/audio/fv_tts/fv_tts_py/: tts_node.py
src/audio/fv_tts/scripts/: fv_tts_node
src/common/fv_msgs/: CMakeLists.txt  package.xml
src/common/fv_msgs/msg/: Detection2D.msg  DetectionArray.msg  DetectionCloudIndices.msg  StalkMetrics.msg  StalkMetricsArray.msg
src/dsp/fa_aec_linear/: README.md  package.xml
src/dsp/fa_aec_linear/config/: default.yaml
src/dsp/fa_aec_nn/: README.md  package.xml
src/dsp/fa_aec_nn/src/: fa_aec_nn_node.cpp
src/dsp/fa_mix/: README.md  package.xml
src/dsp/fa_mix/config/: default.yaml
(+1904 files in other folders)
