<?xml version="1.0"?>
<package format="3">
  <name>fv_audio_vad</name>
  <version>0.1.0</version>
  <description>VAD and wakeword preprocessing node for FluentVision audio stream.</description>
  <maintainer email="maintainer@example.com">Fluent Robotics</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>fv_audio</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
