<?xml version="1.0"?>
<package format="3">
  <name>fv_aspara_points</name>
  <version>0.1.0</version>
  <description>Drop 3D points for detected asparagus and accumulate in map frame.</description>
  <maintainer email="noreply@example.com">maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>fv_msgs</depend>
  <depend>pcl_conversions</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
