<?xml version="1.0"?>
<package format="3">
  <name>fv_detection_fusion</name>
  <version>0.1.0</version>
  <description>Detection fusion node aggregating multiple detection sources into fv_msgs/DetectionArray.</description>

  <maintainer email="maintainer@example.com">FV Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>vision_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>fv_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>fluent_lib</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>fv_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>fluent_lib</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
