<?xml version="1.0"?>
<package format="3">
  <name>fv_instance_seg</name>
  <version>0.1.0</version>
  <description>Fluent Vision instance segmentation node (OpenVINO, YOLO-seg).</description>
  <maintainer email="devnull@example.com">fluent-vision</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>
  <depend>fluent_lib</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
