<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- ============================================================================= -->
<!-- Fluent Vision - 物体検出ノード package.xml -->
<!-- ============================================================================= -->
<!-- 
概要：
  - YOLOv10を使用したリアルタイム物体検出ノードのパッケージ定義
  - OpenVINOによる高速推論対応
  - ROS2 Humble対応の依存関係管理
  - ビルド設定とメタデータの定義

作者：Takashi Otsuka
作成日：2024年
バージョン：1.0
-->
<package format="3">
  <!-- ===== パッケージ基本情報 ===== -->
  <name>fv_object_detector</name>
  <version>1.0.0</version>
  <description>FluentVision用の物体検出マイクロサービス</description>
  <maintainer email="takatronix@gmail.com">Takashi Otsuka</maintainer>
  <license>MIT</license>

  <!-- ===== ビルドツール依存関係 ===== -->
  <buildtool_depend>ament_cmake</buildtool_depend>  <!-- CMakeビルドシステム -->
  <buildtool_depend>ament_cmake_auto</buildtool_depend>  <!-- ROS2自動ビルド支援 -->

  <!-- ===== コアROS2依存関係 ===== -->
  <depend>rclcpp</depend>  <!-- ROS2 C++クライアントライブラリ -->
  <depend>sensor_msgs</depend>  <!-- センサーメッセージ型 -->
  <depend>cv_bridge</depend>  <!-- OpenCV-ROS2橋渡し -->
  <depend>image_transport</depend>  <!-- 画像転送ライブラリ -->
  <depend>std_msgs</depend>  <!-- 標準メッセージ型 -->
  <depend>geometry_msgs</depend>  <!-- 幾何学メッセージ型 -->
  <depend>visualization_msgs</depend>  <!-- 可視化メッセージ型 -->
  <depend>vision_msgs</depend>  <!-- コンピュータビジョンメッセージ -->
  <depend>std_srvs</depend>  <!-- 標準サービス型 -->
  <depend>fluent_lib</depend>  <!-- 共通ユーティリティ（テキスト描画など） -->

  <!-- ===== テスト依存関係 ===== -->
  <test_depend>ament_lint_auto</test_depend>  <!-- 自動リントツール -->
  <test_depend>ament_lint_common</test_depend>  <!-- 共通リントツール -->

  <!-- ===== エクスポート設定 ===== -->
  <export>
    <build_type>ament_cmake</build_type>    <!-- CMakeビルドシステム -->
    <member_of_group>rosidl_interface_packages</member_of_group>    <!-- インターフェースパッケージグループ -->
  </export>
</package> 
