<?xml version="1.0"?>
<package format="3">
  <name>fv_stalk_estimator</name>
  <version>0.1.0</version>
  <description>Asparagus stalk length and root-tip estimator from ROI point clouds.</description>

  <maintainer email="maintainer@example.com">FV Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>fluent_lib</build_depend>
  <build_depend>fv_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>fluent_lib</exec_depend>
  <exec_depend>fv_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

