<?xml version="1.0"?>
<package format="3">
  <name>fa_voice_command_router</name>
  <version>0.1.0</version>
  <description>Application-layer node that manages start/stop/mode switching from voice commands (offline-first).</description>
  <maintainer email="maintainer@example.com">FluentAudio</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>fa_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

